# Automating_Hackathon_Application

./: .env.example  .gitignore  README.md  debug_mlh.py  pyproject.toml  requirements.txt  test_form.html  view_hackathons.py
.github/workflows/: monitor.yml
hackathon_hunter/: __init__.py  __main__.py  cli.py  logging_setup.py  main.py
hackathon_hunter/approval/: __init__.py  approval_models.py  approval_routes.py  approval_service.py  token_manager.py
hackathon_hunter/automation/: __init__.py  approval_engine.py  field_mapper.py  form_detector.py  form_filler.py  page_analyzer.py  playwright_manager.py  readiness_analyzer.py  registration_report.py
hackathon_hunter/config/: __init__.py  settings.py
hackathon_hunter/models/: __init__.py  hackathon.py  profile.py  team_profile.py
hackathon_hunter/notifications/: __init__.py  base.py  email_notifier.py  filters.py  manager.py
hackathon_hunter/repositories/: __init__.py  base.py  notification_log_repository.py  registration_analysis_repository.py  sqlite_repository.py
hackathon_hunter/scrapers/: __init__.py  base.py  devfolio.py  devpost.py  mlh.py  openhackathons.py  unstop.py
hackathon_hunter/services/: __init__.py  profile_service.py  scraper_service.py  team_profile_service.py
profile/: profile.json  team.json
snapshots/: form_analysis.json
tests/: test_approval_workflow.py  test_automation.py  test_email_notifier.py  test_filters.py  test_models.py  test_notification_log_repository.py  test_notification_manager.py  test_profile.py  test_readiness.py  test_repository.py  test_scraper_service.py
(+2 files in other folders)
