[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hackathon-hunter"
version = "1.0.0"
description = "A production-ready hackathon monitoring and storage system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.5",
]

[project.scripts]
hackathon-hunter = "hackathon_hunter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["hackathon_hunter*"]
